<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <SurfaceView
        android:id="@+id/sfVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/llVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVideoStart"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/play"/>

        <Button
            android:id="@+id/btnVideoPause"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause"/>

        <Button
            android:id="@+id/btnVideoStop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/stop"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llVideo"
        android:layout_alignParentStart="true"
        android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
        android:indeterminateOnly="false"
        android:maxHeight="8dp"
        android:minHeight="8dp"
        android:padding="10dp"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/seek_thumb"
        android:thumbOffset="10dp"/>


</RelativeLayout>
